# fcax

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: final_cut_amateur.cpp  video_processor_main.cpp
include/core/: color_corrector.h  engine.h  frame_extractor.h  stabilizer.h  video_engine.h
include/other/: CinderOpenCV.h
include/visualizer/: video_player.h
src/core/: color_corrector.cpp  engine.cpp  frame_extractor.cpp  stabilizer.cpp  video_engine.cpp
src/visualizer/: video_player.cpp
tests/: engine_test.cpp  frame_test.cpp
